--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/prismjs": "^1.26.3",
     "@types/styled-components": "^5.1.34",
     "next": "14.2.1",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
