--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "@types/prismjs": "^1.26.3",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.6.8",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "react": "^18",
