--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/prismjs": "^1.26.3",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
+    "framer-motion": "^11.2.6",
     "moment": "^2.30.1",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
